<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment android:id="@+id/nav_home"
        android:name="com.example.version3_355app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>


    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.version3_355app.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_to_do"
        android:name="com.example.version3_355app.ui.to_do.TodoFragment"
        android:label="@string/menu_to_do"
        tools:layout="@layout/fragment_to_do" />

    <fragment
        android:id="@+id/nav_note"
        android:name="com.example.version3_355app.ui.note.NoteFragment"
        android:label="@string/menu_note"
        tools:layout="@layout/fragment_note" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.version3_355app.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_Profile"
        android:name="com.example.version3_355app.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>